--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,63 @@ body {
   max-width: 415px;
   display: flex;
   flex-direction: column;
-  border-right: 1 pxx solid #DDD;
+  border-right: 1px solid #DDD;
 }
 
-.contetarea {}
+header {
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px;
+}
+
+.header-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.header-buttons {
+  display: flex;
+}
+
+.header-btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  color: #919191
+}
+
+.search {
+  background-color: #f6f6f6;
+  border-bottom: 1px solid #EEE;
+  padding: 5px 15px;
+}
+
+.search-input {
+  background-color: #FFF;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  color: #919191;
+  font-size: small;
+}
+
+
+.search-input input {
+  flex: 1;
+  border: 0;
+  outline: 0;
+  background-color: transparent;
+  margin-left: 10px;
+}
+
+.contentarea {}
