--- a/src/components/ChatListItem.css
+++ b/src/components/ChatListItem.css
@@ -5,6 +5,14 @@
     height: 70px;
 }
 
+.chatListItem:hover {
+    background-color: #F5F5F5;
+}
+
+.chatListItem.active {
+    background-color: #EBEBEB;
+}
+
 .chatListitem-avatar {
     width: 50px;
     height: 50px;
@@ -14,12 +22,16 @@
 
 .chatListitem-lines {
     flex: 1;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     border-bottom: 1px solid #EEE;
     padding-left: 15px;
     margin-left: 15px;
+
+    flex-wrap: wrap;
+    min-width: 0;
 }
 
 .chatListitem-line {
@@ -44,4 +56,11 @@
     color: #999;
     display: flex;
     width: 100%
+}
+
+.chatListitem-lastMsg p {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    margin: 0;
 }
