--- a/src/components/ChatWindow.css
+++ b/src/components/ChatWindow.css
@@ -45,6 +45,8 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    overflow: hidden;
+    transition: all ease 0.3s;
 }
 
 .chatWindow-body {
@@ -52,7 +54,6 @@
     overflow-y: auto;
     background-color: #E5DDD5;
     background-size: cover;
-    background-position: center;
     background-image: url(https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png
 );
 }
@@ -93,4 +94,10 @@
 aside {
     width: auto !important;
     background: none;
+}
+
+.chatWindow-emojiarea {
+    height: 200px;
+    overflow-y: hidden;
+    transition: all ease 0.3s;
 }
