--- a/src/components/ChatWindow.css
+++ b/src/components/ChatWindow.css
@@ -58,6 +58,17 @@
 );
 }
 
+.chatWindow-body::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+
+.chatWindow-body::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+}
+
+
 .chatWindow-footer {
     height: 62px;
     display: flex;
